# pyipopt

./: .gitignore  CMakeLists.txt  MANIFEST.in  ipoptInterface.py  ipoptInterface_test.py  patch_hsl.py  pyproject.toml
.github/workflows/: build_wheels.yml
pyipopt/: __init__.py
src/: wrapper.cpp
